# data_analysis_pyqt

./: .gitignore  README.md  build.py  justfile  main.py  pyproject.toml  start.bat  start.sh
.kiro/specs/data-analysis-app/: design.md  requirements.md  tasks.md
.trae/rules/: project_rules.md
assets/icons/: README.md
assets/linux/: data-analysis-app.desktop
docs/: user_manual.md
scripts/: start.bat  start.sh
src/: __init__.py
src/advanced_analysis/: __init__.py  data_mining.py  machine_learning.py  statistics.py  time_series.py
src/core/: __init__.py  analysis_engine.py  analysis_result_manager.py  async_worker.py  chart_renderer.py  history_manager.py
src/data/: __init__.py  data_loader.py  data_preprocessor.py  data_validator.py  time_detector.py
src/export/: __init__.py  chart_exporter.py  data_exporter.py  export_manager.py  pdf_generator.py
src/models/: __init__.py  analysis_history.py  analysis_result.py  chart_config.py  database_models.py  extended_analysis_result.py  file_info.py  validation.py
src/ui/: __init__.py  analysis_page.py  app_integrator.py  data_preview.py  help_system.py  history_page.py  main_window.py  upload_page.py
src/ui/components/: __init__.py
src/ui/pages/: __init__.py
src/utils/: __init__.py  basic_logging.py  config.py  error_guide.py  error_handler.py  exceptions.py  icon_utils.py  logging_config.py  simple_config.py  version_manager.py
src/visualization/: __init__.py  chart_factory.py  interactive_chart.py
src/workflow/: __init__.py  performance_optimizer.py  workflow_integrator.py
tests/: test_algorithm_accuracy.py  test_app_validation.py  test_config.py  test_core_components.py  test_data_processing.py  test_e2e.py  test_history_management.py  test_integration.py  test_integration_workflow.py  test_models.py  test_runner.py  test_startup.py  test_task4_analysis_engine.py  test_ui_components.py
